# ratatoskr

./: .gitignore  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
docs/: onboard.md
scripts/: release.sh
server/: appConfig.test.ts  appConfig.ts  boardConfig.test.ts  boardConfig.ts  comments.test.ts  comments.ts  epicSummary.test.ts  epicSummary.ts  fs.test.ts  fs.ts  github.test.ts  github.ts  githubMerge.test.ts  githubMerge.ts  githubToken.test.ts  githubToken.ts  index.ts  mcp.test.ts  mcp.ts  prod.test.ts  prod.ts  routeHelpers.test.ts  routeHelpers.ts  types.ts  writeFs.test.ts  writeFs.ts
server/test/: factories.ts
src/: App.css  App.test.tsx  App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/components/: AppLayout.tsx  ArchiveTab.test.tsx  ArchiveTab.tsx  BoardCard.test.tsx  BoardCard.tsx  BoardColumn.tsx  BoardTab.test.tsx  BoardTab.tsx  CommentForm.test.tsx  CommentForm.tsx  CommentItem.test.tsx  CommentItem.tsx  CommentItemEdit.test.tsx  CommentSection.test.tsx  CommentSection.tsx  CreateTicketModal.test.tsx  CreateTicketModal.tsx  DependencyEditor.test.tsx  DependencyEditor.tsx  DependencySection.test.tsx  DependencySection.tsx  EditTicketModal.test.tsx  EditTicketModal.tsx  EmptyState.tsx  EpicColorSwatchButton.test.tsx  EpicColorSwatchButton.tsx  EpicCombobox.test.tsx  EpicCombobox.tsx  EpicRow.test.tsx  EpicRow.tsx  EpicSearchFilter.tsx  (+42 more)
(+42 files in other folders)
